<?xml version="1.0"?>
<package>
  <name>mrdrrt</name>
  <version>0.0.0</version>
  <description>Python code and ROS wrappers for running multi-robot motion
                planning on Cozmos</description>

  <maintainer email="kazuotani14@gmail.com">kazu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
